# qdrant-cli

./: README.md  pyproject.toml
qdrant_cli/: __init__.py  tasks.py
tests/: test_tasks.py
