[tool.poetry]
name = "qdrant-cli"
version = "0.1.5"
description = ""
authors = ["Aaron Collins <aaron.collinsa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "2.2.0"
pyyaml = "^6.0.1"
qdrant-client = "^1.9.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
boto3 = "^1.34.71"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
qdrant = 'qdrant_cli:program.run'